Update fetch-news workflow to include feedparser

--- a/.github/workflows/fetch-news.yml
+++ b/.github/workflows/fetch-news.yml
@@ -23,37 +23,52 @@ jobs:
       
       - name: Install dependencies
         run: |
-          pip install requests python-dateutil
+          pip install requests python-dateutil feedparser
+          echo "✓ Dependencies installed"
       
       - name: Pull latest changes
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git pull origin main --rebase
+          git pull origin main --rebase || echo "Nothing to pull"
       
       - name: Fetch news articles
         env:
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: |
+          echo "=== Fetching news articles ==="
           python fetch_news.py
+          echo "✓ News fetched"
       
       - name: Generate sitemap
         run: |
+          echo "=== Generating sitemap ==="
           python generate_sitemap.py
+          echo "✓ Sitemap generated"
       
       - name: Check for changes
         id: changes
         run: |
           if [ -n "$(git status --porcelain)" ]; then
             echo "changed=true" >> $GITHUB_OUTPUT
+            echo "✓ Changes detected"
           else
             echo "changed=false" >> $GITHUB_OUTPUT
+            echo "ℹ️ No changes to commit"
           fi
       
       - name: Commit and push changes
         if: steps.changes.outputs.changed == 'true'
         run: |
           git add articles.json sitemap.xml robots.txt
-          git commit -m "Update news [$(date +'%Y-%m-%d %H:%M')]" || echo "No changes"
-          git pull origin main --rebase
+          git commit -m "Update news and sitemap [$(date +'%Y-%m-%d %H:%M')]" || echo "No changes to commit"
+          git pull origin main --rebase || echo "Nothing to pull"
           git push origin main
+          echo "✓ Changes pushed"
+      
+      - name: Summary
+        if: success()
+        run: |
+          echo "================================"
+          echo "✓ Workflow completed successfully!"
+          echo "================================"
